# flutter_native_opencv

./: .gitignore  LICENSE  README.md  init.sh  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/flutter_opencv_example/: MainActivity.java
android/app/src/profile/: AndroidManifest.xml
ios/: .gitignore
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
lib/: main.dart  native_opencv.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native_opencv/: .gitignore  README.md  pubspec.yaml
native_opencv/android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
native_opencv/android/src/main/: AndroidManifest.xml
native_opencv/android/src/main/java/com/example/native_opencv/: NativeOpencvPlugin.java
native_opencv/ios/: .gitignore  native_opencv.podspec
native_opencv/ios/Classes/: NativeOpencvPlugin.h  NativeOpencvPlugin.m  SwiftNativeOpencvPlugin.swift  native_opencv.cpp
native_opencv/lib/: native_opencv.dart
native_opencv/linux/: CMakeLists.txt  native_opencv_plugin.cc
native_opencv/macos/: native_opencv.podspec
native_opencv/macos/Classes/: NativeOpencvPlugin.swift
native_opencv/test/: native_opencv_test.dart
native_opencv_linux/: README.md  pubspec.yaml
native_opencv_linux/lib/: native_opencv_linux.dart
native_opencv_linux/linux/: .gitignore  CMakeLists.txt  native_opencv_linux_plugin.cc
native_opencv_linux/linux/include/native_opencv_linux/: native_opencv_linux_plugin.h
native_opencv_macos/: .gitignore  README.md  pubspec.yaml
native_opencv_macos/lib/: native_opencv_macos.dart
native_opencv_macos/macos/: native_opencv_macos.podspec
native_opencv_macos/macos/Classes/: NativeOpencvMacosPlugin.swift
native_opencv_windows/: .gitignore  README.md  pubspec.yaml
native_opencv_windows/lib/: native_opencv_windows.dart
native_opencv_windows/windows/: CMakeLists.txt  native_opencv_windows_plugin.cpp
native_opencv_windows/windows/include/native_opencv_windows/: native_opencv_windows_plugin.h
scripts/: init.sh  init_linux.sh  init_macos.sh  init_windows.ps1
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
